adds null and empty checks, renames State -> ExecutionInfo to avoid confusion with ExecutionState