@@ -191,8 +191,8 @@ public class TestConquery {
 
 		busy |= standaloneCommand.getManager().getDatasetRegistry().getNamespaces().stream()
 								 .map(Namespace::getExecutionManager)
-								 .flatMap(e -> e.getExecutionStates().asMap().values().stream())
-								 .map(ExecutionManager.State::getState)
+								 .flatMap(e -> e.getExecutionInfos().asMap().values().stream())
+								 .map(ExecutionManager.ExecutionInfo::getState)
 								 .anyMatch(ExecutionState.RUNNING::equals);
 
 		for (Namespace namespace : standaloneCommand.getManagerNode().getDatasetRegistry().getNamespaces()) {
@@ -244,7 +244,7 @@ public class TestConquery {
 
 		// The test user is recreated after each test, in the storage, but its id stays the same.
 		// Here we register the client filter once for that test user id.
-		UserId testUserId = config.getAuthorizationRealms().getInitialUsers().get(0).createId();
+		UserId testUserId = config.getAuthorizationRealms().getInitialUsers().getFirst().createId();
 		client.register(new ConqueryAuthenticationFilter(() -> getAuthorizationController().getConqueryTokenRealm().createTokenForUser(testUserId)));
 
 		testUser = getMetaStorage().getUser(testUserId);
@@ -295,7 +295,7 @@ public class TestConquery {
 
 		// MetaStorage is cleared after each test, so we need to add the test user again
 		final MetaStorage storage = standaloneCommand.getManagerNode().getMetaStorage();
-		testUser = standaloneCommand.getManagerNode().getConfig().getAuthorizationRealms().getInitialUsers().get(0).createOrOverwriteUser(storage);
+		testUser = standaloneCommand.getManagerNode().getConfig().getAuthorizationRealms().getInitialUsers().getFirst().createOrOverwriteUser(storage);
 	}
 
 	public Validator getValidator() {
